# randstruct

./: .gitignore  Cargo.toml  README.md  build.rs
src/: lib.rs
tests/: Cargo.toml  README.md  run_tests.sh  test_cases.json
tests/helpers/: generate_json.py  test.c
tests/src/: main.rs
